--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Majdi Jaigirdar</title>
         <style>
             body {
-                margin: 50px auto;
+                margin: 20vh auto 50px;
                 font-family: Arial, sans-serif;
                 display: flex;
                 max-width: 600px;
