Changed profile picture source file URL to the directory image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Majdi Jaigirdar</title>
+        <meta name="description" content="Majdi Jaigirdar's personal website">
+        <link rel="icon" href="../images/Profile.jpeg">
         <style>
             body {
                 margin: 20vh auto 50px;
@@ -33,12 +35,11 @@
             #right_box p {
                 margin: 10px 0 0;
             }
-            
         </style>
     </head>
     <body>
         <div id="left_box">
-            <img id="profile_picture" src="https://avatars.githubusercontent.com/u/70067205?v=4" alt="Majdi Jaigirdar Profile Picture">
+            <img id="profile_picture" src="../images/profile.jpeg" alt="Profile Picture">
         </div>
         <div id="right_box">
             <h1>Majdi Jaigirdar</h1>
