--- a/index.html
+++ b/index.html
@@ -1,70 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar</title>
+        <title>👋 Majdi Jaigirdar</title>
         <meta name="description" content="Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Profile.jpeg">
-        <style>
-            body {
-                margin: 20vh auto 50px;
-                max-width: 800px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                font-family: 'Helvetica Neue', Arial, sans-serif;
-                color: #ffffff;
-                background-color: #111111;
-                line-height: 1.6;
-            }
-
-            #top_section {
-                background: linear-gradient(to bottom, #00008b, #000000);
-            }
-
-            #left_box {
-                width: 150px;
-                height: 150px;
-                margin-bottom: 20px;
-            }
-
-            #profile_picture {
-                width: 100%;
-                border-radius: 50%;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            }
-
-            #right_box {
-                text-align: center;
-            }
-
-            #right_box h1 {
-                margin: 0;
-                font-size: 2em;
-            }
-
-            #right_box p {
-                margin: 10px 0 0;
-                font-size: 1.1em;
-            }
-        </style>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
-        <div id="top_section">
-            <div id="flex_box_container">
-                <div id="left_box">
-                    <img 
-                    id="profile_picture"
-                    src="../images/profile.jpeg" 
-                    alt="Profile Picture" 
-                    onerror="this.onerror=null; this.src='../majdiJ.github.io/images/profile.jpeg';" 
-                    />
+        <header>
+            <!-- Custum header for home page -->
+            <div id="hero">
+                <div id="flex-box-container">
+                    <div class="flex-boxes" id="left-box">
+                        <img id="profile-picture" src="../images/profile.jpeg" alt="Profile Picture">
+                    </div>
+                    <div class="flex-boxes" id="right-box">
+                        <h1>👋 Hey there!<br><span id="bigName">I'm Majdi Jaigirdar</span></h1>
+                        <p>I'm a Computer Science student at Edge Hill University. I've got a passion for programming and I'm always looking to learn new things. I'm currently learning python and java at uni, I'm also learning web development in my free time and learning new technologies, tools and languages.</p>    
+                    </div>
                 </div>
-                <div id="right_box">
-                    <h1>Hey! I'm Majdi Jaigirdar</h1>
-                    <p>I'm a Computer Science atudent at Edge Hill University. I've got a passion for programming and I'm always looking to learn new things. I'm currently learning python and java at uni, I'm also learning web development in my free time and learning new technologies, tools and languages.</p>    
-                </div>        
             </div>
-        </div>
+        </header>
     </body>
 </html>
