--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/home.css">
     </head>
     <body>
         <header>
