Fixed link for EducationSkills.html page

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a class="active-nav-link" href="../about.html">About</a></li>
                     <li><a href="../projects.html">Projects</a></li>
-                    <li><a href="../Education&Skills.html">Education & Skills</a></li>
+                    <li><a href="../EducationSkills.html">Education & Skills</a></li>
                     <li><a href="../Contact.html">Contact</a></li>
                 </ul>
             </nav>    
@@ -60,7 +60,7 @@
                         <li><a href="../index.html">Home</a></li>
                         <li><a class="active-nav-link" href="../about.html">About</a></li>
                         <li><a href="../projects.html">Projects</a></li>
-                        <li><a href="../Education&Skills.html">Education & Skills</a></li>
+                        <li><a href="../EducationSkills.html">Education & Skills</a></li>
                         <li><a href="../Contact.html">Contact</a></li>
                     </ul>
                 </nav>
