--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about.html">About</a></li>
                     <li><a href="../projects.html">Projects</a></li>
-                    <li><a href="../Education&Skills.html">Education & Skills</a></li>
+                    <li><a href="../EducationSkills.html">Education & Skills</a></li>
                     <li><a href="../Contact.html">Contact</a></li>
                 </ul>
             </nav>    
@@ -54,7 +54,7 @@
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../about.html">About</a></li>
                         <li><a href="../projects.html">Projects</a></li>
-                        <li><a href="../Education&Skills.html">Education & Skills</a></li>
+                        <li><a href="../EducationSkills.html">Education & Skills</a></li>
                         <li><a href="../Contact.html">Contact</a></li>
                     </ul>
                 </nav>
