--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <li><a class="active-nav-link" href="../index.html">Home</a></li>
               <li><a href="../about.html">About</a></li>
               <li><a href="../projects.html">Projects</a></li>
-              <li><a href="../Education&Skills.html">Education & Skills</a></li>
+              <li><a href="../EducationSkills.html">Education & Skills</a></li>
               <li><a href="../Contact.html">Contact</a></li>
             </ul>
           </nav>
