added contact page, education and skills page, fixed 404 photo error, aded project files, and more

--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website">
+        <title>Majdi Jaigirdar | About me</title>
+        <meta name="description" content="Majdi Jaigirdar's personal website. About Majdi Jaigirdar.">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
@@ -18,15 +18,15 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a class="active-nav-link" href="../about.html">About</a></li>
                     <li><a href="../projects.html">Projects</a></li>
-                    <li><a href="../EducationSkills.html">Education & Skills</a></li>
-                    <li><a href="../Contact.html">Contact</a></li>
+                    <li><a href="../education-skills.html">Education & Skills</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </nav>    
         </header>
         <main>
             <div class="defualt-page-format-banner" id="about-me-photo">
                 <div id="content">
-                    <h2>About Me</h2>
+                    <h1>About Me</h1>
                 </div>
             </div>
 
@@ -60,8 +60,8 @@
                         <li><a href="../index.html">Home</a></li>
                         <li><a class="active-nav-link" href="../about.html">About</a></li>
                         <li><a href="../projects.html">Projects</a></li>
-                        <li><a href="../EducationSkills.html">Education & Skills</a></li>
-                        <li><a href="../Contact.html">Contact</a></li>
+                        <li><a href="../education-skills.html">Education & Skills</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
