--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website">
+        <title>Majdi Jaigirdar | 404 error</title>
+        <meta name="description" content="Page not found error.">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
     </head>
@@ -17,8 +17,8 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about.html">About</a></li>
                     <li><a href="../projects.html">Projects</a></li>
-                    <li><a href="../EducationSkills.html">Education & Skills</a></li>
-                    <li><a href="../Contact.html">Contact</a></li>
+                    <li><a href="../education-skills.html">Education & Skills</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </nav>    
         </header>
@@ -54,8 +54,8 @@
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../about.html">About</a></li>
                         <li><a href="../projects.html">Projects</a></li>
-                        <li><a href="../EducationSkills.html">Education & Skills</a></li>
-                        <li><a href="../Contact.html">Contact</a></li>
+                        <li><a href="../education-skills.html">Education & Skills</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
