--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
               <li><a class="active-nav-link" href="../index.html">Home</a></li>
               <li><a href="../about.html">About</a></li>
               <li><a href="../projects.html">Projects</a></li>
-              <li><a href="../EducationSkills.html">Education & Skills</a></li>
-              <li><a href="../Contact.html">Contact</a></li>
+              <li><a href="../education-skills.html">Education & Skills</a></li>
+              <li><a href="../contact.html">Contact</a></li>
             </ul>
           </nav>
           <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
