adjusted presentaion on wide screen displays, added google analystics

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-03ZXKCCJLR"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-03ZXKCCJLR');
+        </script>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar | Contact</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website. Contact Majdi.">
+        <title>Majdi Jaigirdar</title>
+        <meta name="description" content="Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
@@ -31,7 +40,7 @@
             </div>
 
             <div class="defualt-page-format-main-content" id="contact-me-main-content">
-                <p>Hello and welcome to my Contact page! I’m thrilled that you’re here and open to connecting. Whether you have a question about my projects, a suggestion for collaboration, or just want to say hello, I’d love to hear from you. Please use the form below to drop me a message, and I’ll get back to you as soon as possible. Your thoughts and inquiries are always welcome! 😄💙</p>
+                <p>I’m thrilled that you’re here and open to connecting. Whether you have a question about my projects, a suggestion for collaboration, or just want to say hello, I’d love to hear from you. Please use the form below to drop me a message, and I’ll get back to you as soon as possible. Your thoughts and inquiries are always welcome! 😄💙</p>
 
                 <div id="form-contact-me">
                     <!-- Form API -->
@@ -123,19 +132,22 @@
                 </div>
             </div>
         </main>
+        
         <footer>
-            <div id="same-line-content">
-                <nav id="navigation-menu">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../about.html">About</a></li>
-                        <li><a href="../projects.html">Projects</a></li>
-                        <li><a href="../education-skills.html">Education & Skills</a></li>
-                        <li><a class="active-nav-link" href="../contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-                <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
-              </div>
+            <div class="footer-content">
+                <div id="same-line-content">
+                    <nav id="navigation-menu">
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../about.html">About</a></li>
+                            <li><a href="../projects.html">Projects</a></li>
+                            <li><a href="../education-skills.html">Education & Skills</a></li>
+                            <li><a href="../contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
+                </div>    
+            </div>
         </footer>
     </body>
 </html>
