--- a/education-skills.html
+++ b/education-skills.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-03ZXKCCJLR"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-03ZXKCCJLR');
+        </script>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar | Education & Skills</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website. Education and skills.">
+        <title>Majdi Jaigirdar</title>
+        <meta name="description" content="Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
@@ -82,19 +91,22 @@
                 </p>
             </div>                            
         </main>
+        
         <footer>
-            <div id="same-line-content">
-                <nav id="navigation-menu">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../about.html">About</a></li>
-                        <li><a href="../projects.html">Projects</a></li>
-                        <li><a class="active-nav-link" href="../education-skills.html">Education & Skills</a></li>
-                        <li><a href="../contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-                <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
-              </div>
+            <div class="footer-content">
+                <div id="same-line-content">
+                    <nav id="navigation-menu">
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../about.html">About</a></li>
+                            <li><a href="../projects.html">Projects</a></li>
+                            <li><a href="../education-skills.html">Education & Skills</a></li>
+                            <li><a href="../contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
+                </div>    
+            </div>
         </footer>
     </body>
 </html>
