--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-03ZXKCCJLR"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-03ZXKCCJLR');
+        </script>
         <meta charset="UTF-8">
         <title>Majdi Jaigirdar</title>
         <meta name="description" content="Majdi Jaigirdar's personal website">
