Added privacy policy, and links to it

--- a/404.html
+++ b/404.html
@@ -68,10 +68,11 @@
                             <li><a href="../projects.html">Projects</a></li>
                             <li><a href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
+                            <li><a href="../privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </nav>
                     <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
-                </div>    
+                </div>
             </div>
         </footer>
     </body>
