--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
           gtag('config', 'G-03ZXKCCJLR');
         </script>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar</title>
+        <title>Contact Majdi Jaigirdar</title>
         <meta name="description" content="Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
@@ -143,10 +143,11 @@
                             <li><a href="../projects.html">Projects</a></li>
                             <li><a href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
+                            <li><a href="../privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </nav>
                     <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
-                </div>    
+                </div>
             </div>
         </footer>
     </body>
