--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
           gtag('config', 'G-03ZXKCCJLR');
         </script>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website">
+        <title>About Majdi Jaigirdar</title>
+        <meta name="description" content="About Majdi Jaigirdar. Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
@@ -73,10 +73,11 @@
                             <li><a href="../projects.html">Projects</a></li>
                             <li><a href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
+                            <li><a href="../privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </nav>
                     <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
-                </div>    
+                </div>
             </div>
         </footer>
     </body>
