--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <li><a href="../projects.html">Projects</a></li>
               <li><a href="../education-skills.html">Education & Skills</a></li>
               <li><a href="../contact.html">Contact</a></li>
+              <li><a class="privacy-policy-link" href="../privacy-policy.html">Privacy Policy</a></li>
             </ul>
           </nav>
           <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
