Added features to make search indexable

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,9 @@
           gtag('config', 'G-03ZXKCCJLR');
         </script>
         <meta charset="UTF-8">
+        <meta name="robots" content="index, follow">
         <title>Contact Majdi Jaigirdar</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website">
+        <meta name="description" content="Contact Majdi Jaigirdar. Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
