--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           gtag('config', 'G-03ZXKCCJLR');
         </script>
         <meta charset="UTF-8">
+        <meta name="robots" content="index, follow">
         <title>Majdi Jaigirdar</title>
         <meta name="description" content="Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
