--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,6 +11,7 @@
           gtag('config', 'G-03ZXKCCJLR');
         </script>
         <meta charset="UTF-8">
+        <meta name="robots" content="index, follow">
         <title>Majdi Jaigirdar | Privacy Policy</title>
         <meta name="description" content="Majdi Jaigirdar's personal-website privacy policy">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
@@ -109,7 +110,7 @@
                     <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us. You can reach us by visiting our <a href="../contact.html">Contact Page</a> or through our social media channels provided on our website.</p>
                                         
                     <p><em>Last updated: Sunday, 9th February 2025</em></p>
-                  </div>                  
+                </div>                  
             </div>              
         </main>
 
