--- a/site-map.html
+++ b/site-map.html
@@ -12,8 +12,8 @@
         </script>
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
-        <title>Majdi Jaigirdar's Education & Skills - NEA</title>
-        <meta name="description" content="Majdi Jaigirdar's education and skills, including his Non-Examined Assessment (NEA) for Computer Science. Majdi Jaigirdar's personal website">
+        <title>Majdi Jaigirdar | Site Map</title>
+        <meta name="description" content="Majdi Jaigirdar's personal-website site map">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
@@ -28,17 +28,37 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about.html">About</a></li>
                     <li><a href="../projects.html">Projects</a></li>
-                    <li><a class="active-nav-link" href="../education-skills.html">Education & Skills</a></li>
+                    <li><a href="../education-skills.html">Education & Skills</a></li>
                     <li><a href="../contact.html">Contact</a></li>
                 </ul>
-            </nav>
+            </nav>    
         </header>
         <main>
-            <div class="defualt-document-view">
-                <embed src="../documents/Majdi_Jaigirdar_Computer_Science_NEA.pdf" type="application/pdf">
-            </div>                            
+            <!-- <div class="defualt-page-format-banner" id="about-me-photo">
+                <div id="content">
+                    <h1>About Me</h1>
+                </div>
+            </div> -->
+
+            <div class="defualt-page-format-main-content" id="about-me-main-content">
+                <div class="site Map">
+                    <h2>Sitemap</h2>
+                    <ul>
+                      <li><a href="../index.html">Home</a></li>
+                      <li><a href="../about.html">About</a></li>
+                      <li><a href="../contact.html">Contact</a></li>
+                      <li><a href="../education-skills.html">Education & Skills</a></li>
+                      <ul>
+                        <li><a href="../education-skills/EPQ.html">EPQ</a></li>
+                        <li><a href="../education-skills/NEA.html">NEA</a></li>
+                      </ul>
+                      <li><a href="../privacy-policy.html">Privacy Policy</a></li>
+                      <li><a href="../404.html">404 Page</a></li>
+                    </ul>
+                </div>                               
+            </div>              
         </main>
-        
+
         <footer>
             <div class="footer-content">
                 <div id="same-line-content">
