--- a/404.html
+++ b/404.html
@@ -11,8 +11,9 @@
           gtag('config', 'G-03ZXKCCJLR');
         </script>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website">
+        <meta name="robots" content="index, follow">
+        <title>404: Page Not Found</title>
+        <meta name="description" content="404: Page Not Found">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
