--- a/education-skills/EPQ.html
+++ b/education-skills/EPQ.html
@@ -11,8 +11,9 @@
           gtag('config', 'G-03ZXKCCJLR');
         </script>
         <meta charset="UTF-8">
-        <title>Majdi Jaigirdar</title>
-        <meta name="description" content="Majdi Jaigirdar's personal website">
+        <meta name="robots" content="index, follow">
+        <title>Majdi Jaigirdar's Education & Skills - EPQ</title>
+        <meta name="description" content="Majdi Jaigirdar's education and skills, including his Extended Project Qualification (EPQ). Majdi Jaigirdar's personal website">
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
