--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="icon" href="../images/Waving_Hand_Emoji.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/home.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
       <main>
@@ -96,18 +97,20 @@
               </div>
           </div>
         </div>
-        <div id="same-line-content">
-          <nav id="navigation-menu">
-            <ul>
-              <li><a class="active-nav-link" href="../index.html">Home</a></li>
-              <li><a href="../about.html">About</a></li>
-              <li><a href="../projects.html">Projects</a></li>
-              <li><a href="../education-skills.html">Education & Skills</a></li>
-              <li><a href="../contact.html">Contact</a></li>
-              <li><a class="privacy-policy-link" href="../privacy-policy.html">Privacy Policy</a></li>
-            </ul>
-          </nav>
-          <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
+        <div id="main-page">
+          <div id="same-line-content">
+            <nav id="navigation-menu">
+              <ul>
+                <li><a class="active-nav-link" href="../index.html">Home</a></li>
+                <li><a href="../about.html">About</a></li>
+                <li><a href="../projects.html">Projects</a></li>
+                <li><a href="../education-skills.html">Education & Skills</a></li>
+                <li><a href="../contact.html">Contact</a></li>
+                <li><a class="privacy-policy-link" href="../privacy-policy.html">Privacy Policy</a></li>
+              </ul>
+            </nav>
+            <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
+          </div>
         </div>
       </main>
     </body>
