--- a/site-map.html
+++ b/site-map.html
@@ -23,16 +23,16 @@
         <link rel="icon" type="image/png" sizes="16x16" href="../icons/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="32x32" href="../icons/favicon-32x32.png">
         <link rel="icon" type="image/x-icon" href="../icons/favicon.ico">
-
         <!-- Apple Touch Icon for iOS -->
         <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
-
         <!-- Android Chrome Icons -->
         <link rel="icon" type="image/png" sizes="192x192" href="../icons/android-chrome-192x192.png">
         <link rel="icon" type="image/png" sizes="512x512" href="../icons/android-chrome-512x512.png">
-
         <!-- Web App Manifest for PWA -->
         <link rel="manifest" href="../icons/site.webmanifest">
+        
+        <!-- Link main.js -->
+        <script src="../js/main.js"></script>
     </head>
     <body>
         <header>
