Added mobile view #1

--- a/site-map.html
+++ b/site-map.html
@@ -57,7 +57,7 @@
             </div> -->
 
             <div class="defualt-page-format-main-content" id="about-me-main-content">
-                <div class="site Map">
+                <div class="Map">
                     <h2>Sitemap</h2>
                     <ul>
                       <li><a href="../index.html">Home</a></li>
@@ -70,6 +70,12 @@
                       </ul>
                       <li><a href="../privacy-policy.html">Privacy Policy</a></li>
                       <li><a href="../404.html">404 Page</a></li>
+                    </ul>
+
+                    <h2>Docuemnts</h2>
+                    <ul>
+                        <li><a href="../documents/Majdi_Jaigirdar_Computer_Science_NEA.pdf">Majdi Jaigirdar Computer Science NEA</a></li>
+                        <li><a href="../documents/Majdi_Jaigirdar_EPQ.pdf">Majdi Jaigirdar EPQ</a></li>
                     </ul>
                 </div>
             </div>
