--- a/404.html
+++ b/404.html
@@ -36,9 +36,6 @@
     </head>
     <body>
         <header>
-            <div style="position: fixed; top: 0; left: 0; width: 100%; padding: 0.3rem 0; background-color: rgb(0, 0, 0); text-align: center; z-index: 1000; border-bottom: 2.5px dashed rgb(255, 234, 0);">
-                <p style="font-size: 0.9rem; margin: 0;">Website is still under construction, so some links may not work as expected and some content may be missing. Come back soon!</p>
-            </div>
             <div class="same-line-content2">
                 <div id="hello-text">
                     <h1><span id="smallHey">Hey there!</span><br> I'm Majdi Jaigirdar 👋</h1>
@@ -79,6 +76,7 @@
 
             <div class="defualt-page-format-main-content" id="404-main-content">
                 <p>Looks like you took a wrong turn. But don’t worry, it happens to the best of us!</p>
+                <p>Website is still under construction, some links may not work as expected and some content may be missing. Come back soon!</p>
                 
                 <p>Here’s what might have gone wrong:</p>
                 <ul>
