--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     <body>
         <header>
             <div style="position: fixed; top: 0; left: 0; width: 100%; padding: 0.3rem 0; background-color: rgb(0, 0, 0); text-align: center; z-index: 1000; border-bottom: 2.5px dashed rgb(255, 234, 0);">
-                <p style="font-size: 0.9rem; margin: 0;">Website is still under construction, so some links may not work as expected and some content may be missing. Come back soon!</p>
+                <p style="font-size: 0.9rem; margin: 0;">Website is still under construction, some links may not work as expected and some content may be missing. Come back soon!</p>
             </div>
             <div class="same-line-content2">
                 <div id="hello-text">
