Updated linkedin social link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   </a>
               
                   <!-- LinkedIn Button -->
-                  <a href="https://www.linkedin.com/in/majdi-jaigirdar-9624721ab/" class="linkedin" title="LinkedIn" target="_blank">
+                  <a href="https://www.linkedin.com/in/majdi-jaigirdar" class="linkedin" title="LinkedIn" target="_blank">
                     <svg role="img" viewBox="0 0 24 24" fill="currentColor"
                           xmlns="http://www.w3.org/2000/svg">
                       <title>LinkedIn</title>
