Edited 'King George V Sixth Form College' to 'King George V Sixth Form College (Associate with Southport College)' to show their partnership

--- a/education-skills.html
+++ b/education-skills.html
@@ -168,8 +168,8 @@
                   <strong>Professional Practice</strong>, <strong>Computer and Network Architecture</strong>, and <strong>Programming 2</strong>. Although I had previous experience with Python, the university coursework has refined my knowledge and led me to explore additional technologies - most recently, I have started learning <strong>Java</strong>. I look forward to continuously expanding my programming repertoire as I progress through my degree.
                 </p>
               
-                <!-- King George V Sixth Form College Section -->
-                <h2>King George V Sixth Form College</h2>
+                <!-- King George V Sixth Form College (Associate with Southport College) Section -->
+                <h2>King George V Sixth Form College (Associate with Southport College)</h2>
                 <p>
                   At King George V Sixth Form College, I studied a wide curriculum that included First Year Maths, A-Level Computer Science, A-Level Psychology, BTEC Applied Science, and an Extended Project Qualification (EPQ).
                 </p>
