Updated theme to be ore glass 3d like

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -68,18 +68,13 @@
             </div>
         </header>
         <main>
-            <!-- <div class="defualt-page-format-banner" id="about-me-photo">
-                <div id="content">
-                    <h1>About Me</h1>
-                </div>
-            </div> -->
 
             <div class="defualt-page-format-main-content" id="about-me-main-content">
                 <div class="privacy-policy">
                     <h1>Privacy Policy</h1>
 
                     <div class="article-callout">
-                        <p><em>I believe transparency and privacy are fundamental human rights. Everyone deserves privacy, both in person and in the digital world. Privacy protects us from harm, empowers free expression, and gives us security and comfort. Users should always know what data is being collected, why it’s being collected, how it’s processed, and by whom. Privacy and transparency should never be a bonus - they must be the minimum standard we fight to protect. <strong>- Majdi Jaigirdar</strong></em></p>
+                        <p><em>I believe transparency and privacy are fundamental human rights. Everyone deserves privacy, both in person and in the digital world. Privacy protects us from harm, empowers free expression, and gives us security and comfort. Users should always know what data is being collected, why it’s being collected, how it’s processed, and by whom. Privacy and transparency should never be a bonus - they must be the minimum standard we fight to protect. - Majdi Jaigirdar</em></p>
                     </div>
 
                     <p><strong>Effective Date:</strong> Sunday, 9th February 2025</p>
